--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -1,21 +1,3 @@
-/* .flexRowContent--header__sectio--subheader {
-
-} */
-
-/* .flexRowContent--header__section--subheader {
-  height: 32px;
-    max-width: none;
-    width: 40%;
-    display: flex;
-    border: 1px solid green;
-    margin-left: auto;
-} */
-
-/* .flexRow--header__section--subheader {
-  height: 32px;
-} */
-
-
 .flexRowContent--header__section--subheader {
   padding-top: 4px;
   gap: 20px;
@@ -25,34 +7,32 @@
   margin-right: 40px;
 }
 
-/* .flexRowContent {
-  height: 3.5rem;
-} */
 
-
+.flexRow--header__bottom--menu {
+  padding: 0px 80px 0 285px;
+}
 
 .flexRowContent--flex-container {
   height: 3.3rem;
 }
 
-.flexRow--header__menu--middle {
-      padding-top: 30px;
-      /* width: 100%; */
-      padding: 0 120px 0 340px;
+.flexColChild--header__menu--container {
+  width: 90%;
+  margin: 0 auto;
+  border-bottom: 1px solid rgb(232, 226, 226);
+}
 
-   }
+.flexRowContent--subemnu--department__gender :global(.vtex-flex-layout-0-x-stretchChildrenWidth):first-child {
+  width: auto !important;
+  border-right: 1px solid rgb(232, 226, 226);
+}
 
+.flexColChild--menu__category-column {
+  height: max-content !important;
+}
 
-   .flexRowContent--header__menu--middle {
-    padding: 17px 0 0 0;
-    letter-spacing: .2rem;
-    gap: 20px;
-    }
-
-/* .flexColChild--col__section-one-text {
-  width: 50px;
-} */
-
-/* .flexRowContent--header__section--subheader :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-  width: 200px !important;
-} */
+.flexRow--menu__bottom,
+.flexRow--menu__bottom-section {
+  transform: translateX(45px);
+  padding: 10px 0 10px 0;
+}
