--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -7,14 +7,24 @@
   margin-right: 40px;
 }
 
+.flexRowContent--header__bottom {
+  align-items: center;
+}
+
 
 .flexRow--header__bottom--menu {
   padding: 0px 80px 0 285px;
 }
 
-.flexRowContent--flex-container {
-  height: 3.3rem;
+.flexRow--header__bottom {
+  transform: translateY(-8px);
+  height: 3.2rem;
 }
+
+.flexRow--header__bottom--user {
+  padding-left: 10px;
+}
+
 
 .flexColChild--header__menu--container {
   width: 90%;
@@ -36,3 +46,10 @@
   transform: translateX(45px);
   padding: 10px 0 10px 0;
 }
+
+.flexRowContent--main-header-mobile {
+  justify-content: center;
+  gap: 230px;
+  align-items: center;
+}
+
