--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -12,14 +12,28 @@
 }
 
 
-.flexRow--header__bottom--menu {
+/* .flexRow--header__bottom--menu {
   padding: 0px 80px 0 285px;
-}
+} */
 
 .flexRow--header__bottom {
   transform: translateY(-8px);
   height: 3.2rem;
 }
+
+.flexRowContent--header__bottom :nth-child(2n) {
+  flex-grow: .6;
+}
+
+.flexRowContent--header__bottom :nth-child(4n) {
+  flex-grow: .2;
+}
+
+.flexRowContent--header__bottom :nth-child(6n) {
+  flex-grow: 0;
+}
+
+
 
 .flexRow--header__bottom--user {
   padding-left: 10px;
@@ -49,7 +63,10 @@
 
 .flexRowContent--main-header-mobile {
   justify-content: center;
-  gap: 230px;
   align-items: center;
+  justify-content: space-between;
 }
 
+.flexRowContent--header__bottom--user :nth-child(3n) {
+  margin-right: 10px;
+}
