--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,19 +1,19 @@
 @font-face{
-    font-family: "Roboto-Bold";
-    src: url(assets/fonts/Roboto-Bold.ttf); 
+    font-family: "AdihusDIN-Bold";
+    src: url(assets/fonts/AdihausDIN-Bold.ttf);
 }
 
 @font-face{
-    font-family: "Roboto-Light";
-    src: url(assets/fonts/Roboto-Light.ttf); 
+    font-family: "AdihusDIN-Light";
+    src: url(assets/fonts/AdihausDIN-CnMediumItalic.ttf);
 }
 
 @font-face{
-    font-family: "Roboto-Medium";
-    src: url(assets/fonts/Roboto-Medium.ttf); 
+    font-family: "AdihausDIN-Regular";
+    src: url(assets/fonts/AdihausDIN-Regular.ttf);
 }
 
 @font-face{
-    font-family: "Roboto-Regular";
-    src: url(assets/fonts/Roboto-Regular.ttf); 
+    font-family: "adineuePRO-Bold";
+    src: url(assets/fonts/adineuePRO-Bold.ttf);
 }
