--- a/styles/css/desktop/header/vtex.store-components.css
+++ b/styles/css/desktop/header/vtex.store-components.css
@@ -1,12 +1,13 @@
-/* .logoImage {
+.logoImage {
   transform: translateY(-10px);
-} */
+}
 
 .searchBarContainer :global(.vtex-input-prefix__group ){
   width: 180px;
   height: 32px;
   border-radius: 0;
 }
+
 
 .imageElement--img__menu--subcategory {
   transform: translateX(25px);
@@ -29,15 +30,22 @@
 .infoCardHeadline--info-card-example {
   color: #fff;
   font-weight: 700;
+  font-size: 40px;
+  font-family: "adineuePRO-Bold";
 }
 .infoCardSubhead--info-card-example {
   color: #fff;
+  font-weight: 400;
+  font-size: 18px;
+  font-family: "AdihausDIN-Regular";
 }
 
 .infoCardTextContainer--info-card-example :global(.vtex-button) {
   background: #fff;
   color: #000;
   font-weight: 700;
+  letter-spacing: 2px;
+  font-family: "AdihausDIN-Regular";
+  height: 50px;
 }
-
 
