--- a/styles/css/desktop/header/vtex.store-components.css
+++ b/styles/css/desktop/header/vtex.store-components.css
@@ -2,6 +2,10 @@
   transform: translateY(-10px);
 }
 
+.logoImage--container__logo--mobile {
+  transform: translateY(5px);
+}
+
 .searchBarContainer :global(.vtex-input-prefix__group ){
   width: 180px;
   height: 32px;
@@ -17,35 +21,11 @@
   transform: translateY(3px);
 }
 
-.infoCardTextContainer--info-card-example {
-  margin-left: 150px;
+.imageElement--home__search--logo {
+  transform: translateY(-8px);
 }
 
-.infoCardContainer--info-card-example {
-  height: 670px;
-  border: 0;
-
+.imageElement--header__favorite--logo {
+  transform: translateY(-1px);
+  margin-left: 15px;
 }
-
-.infoCardHeadline--info-card-example {
-  color: #fff;
-  font-weight: 700;
-  font-size: 40px;
-  font-family: "adineuePRO-Bold";
-}
-.infoCardSubhead--info-card-example {
-  color: #fff;
-  font-weight: 400;
-  font-size: 18px;
-  font-family: "AdihausDIN-Regular";
-}
-
-.infoCardTextContainer--info-card-example :global(.vtex-button) {
-  background: #fff;
-  color: #000;
-  font-weight: 700;
-  letter-spacing: 2px;
-  font-family: "AdihausDIN-Regular";
-  height: 50px;
-}
-
