--- a/styles/css/desktop/home/vtex.store-components.css
+++ b/styles/css/desktop/home/vtex.store-components.css
@@ -33,3 +33,27 @@
   border: none;
   border-radius: 0;
 }
+
+.infoCardTextContainer--info-card-example :global(.vtex-button)::after {
+  content: "";
+    display: block;
+    position: absolute;
+    border-right: 1px solid #fff;
+    border-top: 1px solid #fff;
+    height: 100%;
+    right: -5px;
+    top: 4px;
+    width: 3px;
+}
+
+.infoCardTextContainer--info-card-example :global(.vtex-button)::before {
+  content: "";
+    display: block;
+    position: absolute;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    height: 3px;
+    width: 100%;
+    bottom: -5px;
+    left: 5px;
+}
