--- a/styles/css/desktop/footer/vtex.flex-layout.css
+++ b/styles/css/desktop/footer/vtex.flex-layout.css
@@ -3,6 +3,10 @@
   padding-bottom: 35px;
 }
 
+.flexRow--desktop__footer--main {
+  background: #282c31;
+}
+
 .flexRowContent--footer__section--two {
   gap: 70px;
 }
@@ -11,9 +15,9 @@
   padding-top: 5px;
 }
 
-.flexRowContent--footer__section--three {
+/* .flexRowContent--footer__section--three {
   gap: 40px;
-}
+} */
 
 .flexCol--footer__section--three  {
   background: #282c31;
