--- a/styles/css/desktop/footer/vtex.rich-text.css
+++ b/styles/css/desktop/footer/vtex.rich-text.css
@@ -27,7 +27,25 @@
 }
 
 .paragraph--footer-li-three {
-  color: #fff;
+  color: #d3d7da;
+  font-family: "AdihausDIN-Regular";
+  font-size: 12px;
+  margin-top: 30px;
+  padding: 0 15px;
+  border-right: solid 1px;
+}
+
+.paragraph--footer-li-three--other {
+  color: #d3d7da;
+  font-family: "AdihausDIN-Regular";
+  font-size: 12px;
+  margin-top: 30px;
+  padding: 0 15px;
+}
+
+.paragraph--footer-copyright {
+  padding-bottom: 20px;
+  color: #d3d7da;
   font-family: "AdihausDIN-Regular";
   font-size: 12px;
   padding-top: 30px;
