--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -128,6 +128,14 @@
   padding-left: 10px;
 }
 
+.flexCol--mobile__menu--items {
+  transform: translateX(15px);
+  width: 80%;
+}
+
+.flexColChild--mobile__menu--items {
+  width: 250px;
+}
 
 @media screen and (max-width: 2560px) {
   .flexRow--header__bottom--menu {
