--- a/styles/css/desktop/home/vtex.flex-layout.css
+++ b/styles/css/desktop/home/vtex.flex-layout.css
@@ -4,6 +4,11 @@
     max-width: 1200px;
 } */
 
+.flexRowContent--home__shelf {
+    width: 80%;
+    margin: 0 auto 30px auto;
+}
+
 .flexRow--desktop__shields {
   background-color: rgb(235, 237, 238);
 }
@@ -55,7 +60,7 @@
 .flexRowContent--home__section--history {
   width: 80%;
   margin: 0 auto;
-  padding: 80px 0 80px 0;
+  padding: 80px 0 30px 0;
 }
 
 .flexColChild--home__section--historyone {
