--- a/styles/css/desktop/home/vtex.slider-layout.css
+++ b/styles/css/desktop/home/vtex.slider-layout.css
@@ -5,15 +5,15 @@
 .slideChildrenContainer--carousel_home {
   /* height: 400px; */
   width: 300px;
-  background-color: #EBEEF0;
+  /* background-color: #EBEEF0; */
 }
 .slideChildrenContainer--carousel_home:hover {
   border: solid 1px;
 }
 
 .slideChildrenContainer--carousel_home :global(.vtex-button) {
-  background: #000;
-  color: #fff;
+  background: #fff;
+  color: #000;
   font-weight: 700;
   letter-spacing: 2px;
   font-family: "AdihausDIN-Regular";
