--- a/styles/css/phone/home/vtex.flex-layout.css
+++ b/styles/css/phone/home/vtex.flex-layout.css
@@ -1,5 +1,10 @@
-/* Example Phone:
-.flexRow--home__section-2 {
-    margin: 50px auto;
-    max-width: 1200px;
-} */
+.flexRow--phone__shields {
+  background-color: rgb(235, 237, 238);
+}
+
+.flexRowContent--phone__shields {
+  background-color: rgb(235, 237, 238);
+  padding-bottom: 25px;
+  display: flex;
+  gap: 5px;
+}
