--- a/styles/css/desktop/header/vtex.store-components.css
+++ b/styles/css/desktop/header/vtex.store-components.css
@@ -5,6 +5,7 @@
 
 .logoImage--container__logo--mobile {
   transform: translateY(5px);
+  /* transform: translateX(100px); */
 }
 
 .searchBarContainer :global(.vtex-input-prefix__group ){
