--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -77,8 +77,20 @@
 
 
 
-.flexRowContent--drawer-header :nth-child(2n) {
-  padding-right: 70px;
+/* .flexRowContent--drawer-header  {
+  gap: 50px;
+} */
+
+.flexRow--drawer-header {
+  width: 100%;
+}
+
+.flexRowContent--drawer-header {
+  display: flex;
+}
+
+.flexCol--drawer-close-button :global(.vtex-store-drawer-0-x-closeIcon) {
+  transform: translateY(5px);
 }
 
 .flexRow--main-header-mobile {
@@ -131,6 +143,7 @@
 .flexCol--mobile__menu--items {
   transform: translateX(15px);
   width: 80%;
+  margin-top: 20px;
 }
 
 .flexColChild--mobile__menu--items {
@@ -173,6 +186,12 @@
 @media screen and (max-width: 1600px) {
   .flexRow--header__bottom--menu {
     margin-right: 0px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .flexRowContent--drawer-header  {
+    display: flex;
   }
 }
 
