--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -106,48 +106,13 @@
 }
 
 
-.flexCol--icon__mobile--profile {
-  padding: 0;
-  transform: translateY(4px);
+.flexCol--autocomplete__image-container {
+  background: #EBEEF0;
+  height: 118px;
 }
 
-.flexCol--icon__desktop--favorites {
-  transform: translateY(10px);
-  padding-right: 15px;
-}
-
-
-
-.flexColChild--icon__mobile--search {
-  transform: translateY(10px);
-}
-
-.flexCol--icon__mobile--cart {
-  transform: translateY(2px);
-}
-
-.flexRowContent--header__mobile--section-one {
-  display: flex;
-  transform: translateY(5px);
-}
-
-.flexRowContent--header__bottom--user {
-  display: flex;
-  transform: translateY(3px);
-}
-
-.flexRow--header__mobile--section-one {
-  padding-left: 10px;
-}
-
-.flexCol--mobile__menu--items {
-  transform: translateX(15px);
-  width: 80%;
-  margin-top: 20px;
-}
-
-.flexColChild--mobile__menu--items {
-  width: 250px;
+.flexColChild--autocomplete__information-container {
+  height: 20% !important;
 }
 
 @media screen and (max-width: 2560px) {
