--- a/styles/css/desktop/header/vtex.search.css
+++ b/styles/css/desktop/header/vtex.search.css
@@ -5,9 +5,25 @@
   color: #000;
 }
 
+.tileListList {
+  display: flex;
+  flex-direction: column !important;
+}
+
 .itemListTitle,
 .itemListItem {
   font-size: 16px;
   font-family: "AdihausDIN-Regular";
   color: #000;
+}
+
+.biggy-autocomplete {
+  width: 80%;
+  transform: translateX(155px);
+}
+
+@media screen and (max-width: 1024px) {
+  .biggy-autocomplete  {
+    transform: translateX(1px);
+  }
 }
