--- a/styles/css/phone/home/vtex.rich-text.css
+++ b/styles/css/phone/home/vtex.rich-text.css
@@ -10,3 +10,21 @@
   padding-top: 20px;
   background-color: rgb(235, 237, 238);
 }
+
+.wrapper--phone__titles {
+  width: 80%;
+  margin-left: 10px;
+}
+
+.paragraph--phone__titles {
+  font-size: 36px;
+  font-weight: bold;
+  color: #000;
+  font-family: "adineuePRO-Bold";
+  line-height: 1;
+  letter-spacing: .02em;
+}
+
+.container--phone__titles{
+margin-top: 50px;
+}
