--- a/styles/css/desktop/footer/vtex.store-link.css
+++ b/styles/css/desktop/footer/vtex.store-link.css
@@ -10,7 +10,7 @@
   position: relative;
   border-radius: 0;
   height: max-content;
-  background-color: #fff;
+  background-color: #000;
   border: none;
   align-self: center;
   padding: 20px;
