--- a/styles/css/desktop/header/vtex.modal-layout.css
+++ b/styles/css/desktop/header/vtex.modal-layout.css
@@ -3,3 +3,7 @@
   transform: translateY(10px);
 }
 
+.container--modal__layout--login :global(.vtex-modal-layout-0-x-paperNotFullScreen) {
+  margin: 4px !important;
+}
+
