--- a/styles/css/mobile/header/vtex.rich-text.css
+++ b/styles/css/mobile/header/vtex.rich-text.css
@@ -4,3 +4,7 @@
   font-family: "AdihausDIN-Regular";
   font-size: 18px;
 }
+.paragraph--mobile__menu--colombia {
+  color: #000;
+  font-family: "AdihausDIN-Regular";
+}
