--- a/styles/css/desktop/header/vtex.rich-text.css
+++ b/styles/css/desktop/header/vtex.rich-text.css
@@ -15,6 +15,7 @@
   font-size: 12px;
   color: #000;
   font-family: "AdihausDIN-Regular";
+  cursor: pointer;
 }
 
 .container--menu__category--title {
