--- a/styles/css/desktop/header/vtex.search.css
+++ b/styles/css/desktop/header/vtex.search.css
@@ -24,6 +24,7 @@
 
 @media screen and (max-width: 1024px) {
   .biggy-autocomplete  {
-    transform: translateX(1px);
+    transform: translateX(-150px);
+    width: 400px;
   }
 }
