--- a/styles/css/desktop/home/vtex.rich-text.css
+++ b/styles/css/desktop/home/vtex.rich-text.css
@@ -42,6 +42,11 @@
   padding-top: 30px;
 }
 
+.paragraph--home__tab1--title {
+  font-family: "AdihausDIN-Regular";
+  font-size: 12px;
+}
+
 .paragraph--tendecies__title {
   padding-top: 10px;
   font-size: 16px;
