--- a/styles/css/mobile/header/vtex.store-components.css
+++ b/styles/css/mobile/header/vtex.store-components.css
@@ -1,5 +1,14 @@
+.logoImage--container__logo--mobile {
+  transform: translateY(5px);
+  /* transform: translateX(100px); */
+}
+
+.logoLink--container__logo--mobile {
+  transform: translateX(-30px);
+}
+
 .logoImage--mobile__logo--drawer {
-  transform: translateX(100px);
+  transform: translateX(80px);
 }
 
 .searchBarInnerContainer--mobile__header--search :global(.vtex-input-prefix__group) {
@@ -24,6 +33,56 @@
   width: 100vw;
 }
 
-/* .searchBarContainer {
-  height: 600px;
-} */
+@media screen and (max-width: 1024px) {
+
+  .logoLink--container__logo--mobile {
+    transform: translateX(-80px);
+  }
+  .logoImage--mobile__logo--drawer {
+    transform: translateX(120px);
+  }
+}
+
+@media screen and (max-width: 900px) {
+
+  .logoLink--container__logo--mobile {
+    transform: translateX(-40px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .logoImage--mobile__logo--drawer {
+    transform: translateX(80px);
+  }
+}
+
+
+@media screen and (max-width: 700px) {
+
+  .logoLink--container__logo--mobile {
+    transform: translateX(-30px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+
+  .logoLink--container__logo--mobile {
+    transform: translateX(20px);
+  }
+}
+
+@media screen and (max-width: 550px) {
+
+  .logoImage--mobile__logo--drawer {
+    transform: translateX(50px);
+  }
+}
+
+@media screen and (max-width: 450px) {
+
+  .logoImage--mobile__logo--drawer {
+    transform: translateX(10px);
+  }
+}
+
